@@ -53,7 +53,7 @@ theme:
     code: Roboto Mono
   favicon: assets/images/favicon.png
   logo:
-    icon: school
+    icon: "\uE80C"
 
 # Options
 extra:
